--- a/src/vlab/WEB/index.html
+++ b/src/vlab/WEB/index.html
@@ -7,7 +7,7 @@
             <link rel="stylesheet" href="css/lib/bootstrap.min.css" type="text/css" />
 
         
-            <link rel="stylesheet" href="css/dev/you-dev-style.css" type="text/css" />
+            <link rel="stylesheet" href="css/dev/dev-style.css" type="text/css" />
 
         
             </head>
